[MOOSE-156]: Fix white background overflows admin UI

--- a/wp-content/themes/core/blocks/tribe/navigation-link/editor.pcss
+++ b/wp-content/themes/core/blocks/tribe/navigation-link/editor.pcss
@@ -5,7 +5,7 @@
  * ------------------------------------------------------------------------- */
 
 .wp-block-tribe-navigation-link {
-	background-color: var(--color-white);
+	background-color: transparent;
 
 	.site-header__mega-menu-item-wrapper {
 		position: relative !important;
