--- a/wp-content/themes/core/blocks/tribe/standard-menu-item/editor.pcss
+++ b/wp-content/themes/core/blocks/tribe/standard-menu-item/editor.pcss
@@ -23,6 +23,7 @@
 		position: relative;
 		box-shadow: none;
 		width: 100%;
+		background-color: transparent;
 		border-top: 1px solid var(--masthead-navigation-border-color);
 
 		/* remove wrapper styles if this is an individual link item */
